updated method