@@ -8,7 +8,7 @@ class FactoryProvider {
         return switch (type) {
             case FactoryNames.CAR -> new CarFactory();
             case FactoryNames.TRUCK -> new TruckFactory();
-            default -> throw new IllegalArgumentException("This is %s".formatted(type));
-        }
+            default -> throw new IllegalArgumentException(String.format("This is a %s.", type));
+        };
     }
 }
